Version History
===============

2.0:

- changes for Elgg 1.9
- added: support for more entity types

1.0:

- initial release